Sat Jan  8  6:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSPortNameServer.m: Raise exception on failure to register name.

Fri Jan  8  9:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSObject.m: Cache a few more classes.
        * src/include/fast.x: Add a few more classes to cache.
        * checks/benchmark.m: Benchmark classname lookup overhead.
        * src/Makefile.postamble: Improve dependencies.

Wed Jan  6 22:05:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/UnixFileHandle.m: Fixed error in last change to ([-closeFile])
        which could fail to remove descriptors from runloop properly.

Wed Jan  6 10:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * mframe/alpha/linux-gnu: First rough attempt at making a config
        file for the DEC alpha.
        * mframe/alpha/gneric: ditto.

Tue Jan  5 20:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * configure.in: New stuff for making byte-order and type-size
        information available in GSConfig.h
        * src/NSTask.m: Set process group for child process and preliminary
        code for keeping track of active child tasks and handlign sigchld.
        * src/UnixFileHandle.m: Modified ([-closeFile]) to send notifications
        if there are any asynchronous operations in progress.
        * src/include/Foundation.h: include GSConfig.h
        * src/include/NSObject.h: include GSConfig.h
        * src/include/NSByteOrder.h: Use GS_WORDS_BIGENDIAN from GSConfig.h
        * src/include/GSConfig.h.in: Add typedefs for types with known size.
        * src/include/config.h.in: Added HAVE_SETPGID and HAVE_SETPGRP

Tue Jan  5  9:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * src/NSTask.m: Workaround for bug in linux waitpid(), general
        tidying, clean up descriptors in child process.